[tool.poetry]
name = "bunyeok"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
google-cloud-translate = "^3.2.0"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
